simple boy updated

--- a/Simple-Boy/style.css
+++ b/Simple-Boy/style.css
@@ -1,8 +1,8 @@
 body {
-  background: linear-gradient( to bottom right,#2193b0 30%, #6dd5ed);
+  background: #5cA2c6;
   height: 100vh;
   display: grid;
-  place-items: center;
+  place-item: center;
   margin: 0;
 }
 
@@ -12,6 +12,7 @@ body {
   position: relative;
 }
 
+/* head shape/size */
 .head {
   width: 300px;
   height: 300px;
@@ -24,6 +25,7 @@ body {
   align-items: baseline;
 }
 
+ /* head shadow */
 .head::before {
   content: "";
   position: absolute;
@@ -31,8 +33,10 @@ body {
   height: 300px;
   border-radius: 50%;
   box-shadow: inset -22px 5px 0 3px rgba(0,0,0,.2)
+  
 } 
 
+/* neck */
 .head::after {
   content: "";
   position: absolute;
@@ -43,34 +47,36 @@ body {
   border: 10px solid black;
 }
 
+/* sunglasses */
 .lens {
   background: black;
-  border: 10px solid #424242;
+  border: 15px solid #424242;
   border-radius: 50%;
   width: 150px;
   height: 150px;
   position: absolute;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
+
 .left {
-  margin-left: -180px;
+  left: 165px;
+  position: absolute;
 }
 
 .right {
-  margin-left: 180px;
+  right: 165px;
+  position: absolute;
 }
 
 .bridge {
   position: absolute;
-  top: 29%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 10px;
-  width: 5%;
-  background-color: #424242;
+  height: 20px;
+  width: 50px;
+  background: #424242;
+  top: 90px;
 }
 
 .mouth {
@@ -80,15 +86,35 @@ body {
   border: 10px solid black;
   border-radius: 50%;
   align-self: center;
-  clip-path: circle(45% at 49% 100%);
+  margin-top: 1rem;
+  clip-path: circle(50% at 49% 100%); 
 }
 
 .body {
   position: absolute;
-  height: 70px;
+  height: 50px;
   width: 100px;
-  background: blue;
-  top: 350px;
-  border-radius: 100% 100% 100% 100% / 100% 100% 0% 0%;
+  background: rgb(0,140,255);
+  top: 345px;
   border: 10px solid black;
+  border-radius: 100% 100% 100% 100% / 100% 100% 0% 0%;
 }
+
+.body::before, .body::after {
+  position: absolute;
+  content: "";
+  width: 15px;
+  height: 20px;
+  top: 30px;
+}
+
+.body::before {
+  border-right: 10px solid black;
+}
+
+.body::after {
+  border-left: 10px solid black;
+  right: 0;
+}
+
+/* my codepen here: https://codepen.io/ayninur/pen/MWeMRBy */
